# lost-in-cave

./: .gitignore  README.md
src/: Background.cpp  Background.h  CMakeLists.txt  Game.cpp  Game.h  GameParameters.h  Gem.cpp  Gem.h  Hazard.cpp  Hazard.h  MenuButton.cpp  MenuButton.h  Player.cpp  Player.h  Wall.cpp  Wall.h  build.bat  build_run.bat  build_run_release.bat  main.cpp
src/engine/: Animation.cpp  Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  FileManager.cpp  FileManager.h  GameObject.cpp  GameObject.h  GameTime.cpp  GameTime.h  KeyInput.cpp  KeyInput.h  MouseInput.cpp  MouseInput.h  Physics.cpp  Physics.h  Random.cpp  Random.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextFont.cpp  TextFont.h  Texture.cpp  Texture.h  UIButton.cpp  UIButton.h  UIObject.cpp  UIObject.h  UISprite.cpp  UISprite.h  UIText.cpp  (+6 more)
src/engine/shaders/: UI_text_fragment.glsl  UI_text_vertex.glsl  basic_fragment.glsl  basic_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl
